--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -27,9 +27,9 @@ workflows:
         script: keychain initialize
       - name: Fetch signing files
         script: |
-          app-store-connect fetch-signing-files "io.codemagic.app" \  # Fetch signing files for specified bundle ID (use "$(xcode-project detect-bundle-id)" if not specified)
-            --type IOS_APP_DEVELOPMENT \  # Specify provisioning profile type*
-            --create  # Allow creating resources if existing are not found.      
+          app-store-connect fetch-signing-files "io.codemagic.app" \
+            --type IOS_APP_DEVELOPMENT \
+            --create    
       - name: Set up signing certificate
         script: keychain add-certificates
       - name: Set up code signing settings on Xcode project
