--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -27,7 +27,7 @@ workflows:
         script: keychain initialize
       - name: Fetch signing files
         script: |
-          app-store-connect fetch-signing-files "io.codemagic.app" \
+          app-store-connect fetch-signing-files "com.mark.nativetestapp" \
             --type IOS_APP_DEVELOPMENT \
             --create    
       - name: Set up signing certificate
