--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -26,11 +26,15 @@ workflows:
       - name: Set up keychain to be used for codesigning using Codemagic CLI 'keychain' command
         script: keychain initialize
       - name: Fetch signing files
-        script: |
+        script: 
+        ignore_failure: true
+        - |
           java -version
           app-store-connect fetch-signing-files "com.mark.nativetestapp" \
             --type IOS_APP_DEVELOPMENT \
-            --create    
+            --create
+          shabang
+          bangarang
       - name: Set up signing certificate
         script: keychain add-certificates
       - name: Set up code signing settings on Xcode project
